updated register call
